# masterstreamer

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
BRUTO/: MeterReceiver.kt  PROTOCOL.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
BRUTO/clarity-m-audio-analyzer/: README.md  debug.keystore.base64  metadata.json
BRUTO/clarity-m-audio-analyzer/app/: build.gradle.kts
BRUTO/clarity-m-audio-analyzer/app/src/main/: AndroidManifest.xml
BRUTO/clarity-m-audio-analyzer/app/src/main/java/com/example/: MainActivity.kt  MainViewModel.kt
BRUTO/clarity-m-audio-analyzer/app/src/main/java/com/example/dsp/: AudioEngine.kt  BluetoothQualityMonitor.kt  FftAnalyzer.kt  KWeightingFilter.kt  LoudnessMeter.kt  MasteringValidation.kt  MeterState.kt  SignalGenerator.kt  SnapshotManager.kt  StereoAnalyzer.kt  TruePeakMeter.kt  UDPReceiver.kt
BRUTO/clarity-m-audio-analyzer/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
BRUTO/clarity-m-audio-analyzer/app/src/main/res/values/: strings.xml
Source/: AudioPacket.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TransportPacket.h
